Revert "jdk 15"
This reverts commit 547aec6a